--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 node_modules/
 dist/
 
+# IDE launch config
+*.launch
+
 # Compiled Java class files
 *.class
 
@@ -48,3 +51,15 @@ Thumbs.db
 *.mov
 *.wmv
 
+# Local
+*.bin
+*.sfb
+*.xml
+*.prefs
+output.txt
+crypto.txt
+**/Debug
+*.d
+*.o
+*.su
+/Debug/
